seaqt/QtGui/gen_qscreen.nim

import ./Qt5Gui_libs

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Gui")  & " -fPIC"
{.compile("gen_qscreen.cpp", cflags).}


import ./gen_qscreen_types
export gen_qscreen_types

import
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject,
  ../QtCore/gen_qobjectdefs_types,
  ../QtCore/gen_qpoint_types,
  ../QtCore/gen_qrect_types,
  ../QtCore/gen_qsize_types,
  ./gen_qpixmap_types,
  ./gen_qtransform_types
export
  gen_qmetaobject_types,
  gen_qobject,
  gen_qobjectdefs_types,
  gen_qpoint_types,
  gen_qrect_types,
  gen_qsize_types,
  gen_qpixmap_types,
  gen_qtransform_types

type cQScreen*{.exportc: "QScreen", incompleteStruct.} = object

proc fcQScreen_metaObject(self: pointer, ): pointer {.importc: "QScreen_metaObject".}
proc fcQScreen_metacast(self: pointer, param1: cstring): pointer {.importc: "QScreen_metacast".}
proc fcQScreen_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QScreen_metacall".}
proc fcQScreen_tr(s: cstring): struct_miqt_string {.importc: "QScreen_tr".}
proc fcQScreen_trUtf8(s: cstring): struct_miqt_string {.importc: "QScreen_trUtf8".}
proc fcQScreen_name(self: pointer, ): struct_miqt_string {.importc: "QScreen_name".}
proc fcQScreen_manufacturer(self: pointer, ): struct_miqt_string {.importc: "QScreen_manufacturer".}
proc fcQScreen_model(self: pointer, ): struct_miqt_string {.importc: "QScreen_model".}
proc fcQScreen_serialNumber(self: pointer, ): struct_miqt_string {.importc: "QScreen_serialNumber".}
proc fcQScreen_depth(self: pointer, ): cint {.importc: "QScreen_depth".}
proc fcQScreen_size(self: pointer, ): pointer {.importc: "QScreen_size".}
proc fcQScreen_geometry(self: pointer, ): pointer {.importc: "QScreen_geometry".}
proc fcQScreen_physicalSize(self: pointer, ): pointer {.importc: "QScreen_physicalSize".}
proc fcQScreen_physicalDotsPerInchX(self: pointer, ): float64 {.importc: "QScreen_physicalDotsPerInchX".}
proc fcQScreen_physicalDotsPerInchY(self: pointer, ): float64 {.importc: "QScreen_physicalDotsPerInchY".}
proc fcQScreen_physicalDotsPerInch(self: pointer, ): float64 {.importc: "QScreen_physicalDotsPerInch".}
proc fcQScreen_logicalDotsPerInchX(self: pointer, ): float64 {.importc: "QScreen_logicalDotsPerInchX".}
proc fcQScreen_logicalDotsPerInchY(self: pointer, ): float64 {.importc: "QScreen_logicalDotsPerInchY".}
proc fcQScreen_logicalDotsPerInch(self: pointer, ): float64 {.importc: "QScreen_logicalDotsPerInch".}
proc fcQScreen_devicePixelRatio(self: pointer, ): float64 {.importc: "QScreen_devicePixelRatio".}
proc fcQScreen_availableSize(self: pointer, ): pointer {.importc: "QScreen_availableSize".}
proc fcQScreen_availableGeometry(self: pointer, ): pointer {.importc: "QScreen_availableGeometry".}
proc fcQScreen_virtualSiblings(self: pointer, ): struct_miqt_array {.importc: "QScreen_virtualSiblings".}
proc fcQScreen_virtualSiblingAt(self: pointer, point: pointer): pointer {.importc: "QScreen_virtualSiblingAt".}
proc fcQScreen_virtualSize(self: pointer, ): pointer {.importc: "QScreen_virtualSize".}
proc fcQScreen_virtualGeometry(self: pointer, ): pointer {.importc: "QScreen_virtualGeometry".}
proc fcQScreen_availableVirtualSize(self: pointer, ): pointer {.importc: "QScreen_availableVirtualSize".}
proc fcQScreen_availableVirtualGeometry(self: pointer, ): pointer {.importc: "QScreen_availableVirtualGeometry".}
proc fcQScreen_primaryOrientation(self: pointer, ): cint {.importc: "QScreen_primaryOrientation".}
proc fcQScreen_orientation(self: pointer, ): cint {.importc: "QScreen_orientation".}
proc fcQScreen_nativeOrientation(self: pointer, ): cint {.importc: "QScreen_nativeOrientation".}
proc fcQScreen_orientationUpdateMask(self: pointer, ): cint {.importc: "QScreen_orientationUpdateMask".}
proc fcQScreen_setOrientationUpdateMask(self: pointer, mask: cint): void {.importc: "QScreen_setOrientationUpdateMask".}
proc fcQScreen_angleBetween(self: pointer, a: cint, b: cint): cint {.importc: "QScreen_angleBetween".}
proc fcQScreen_transformBetween(self: pointer, a: cint, b: cint, target: pointer): pointer {.importc: "QScreen_transformBetween".}
proc fcQScreen_mapBetween(self: pointer, a: cint, b: cint, rect: pointer): pointer {.importc: "QScreen_mapBetween".}
proc fcQScreen_isPortrait(self: pointer, orientation: cint): bool {.importc: "QScreen_isPortrait".}
proc fcQScreen_isLandscape(self: pointer, orientation: cint): bool {.importc: "QScreen_isLandscape".}
proc fcQScreen_grabWindow(self: pointer, window: uint): pointer {.importc: "QScreen_grabWindow".}
proc fcQScreen_refreshRate(self: pointer, ): float64 {.importc: "QScreen_refreshRate".}
proc fcQScreen_geometryChanged(self: pointer, geometry: pointer): void {.importc: "QScreen_geometryChanged".}
proc fcQScreen_connect_geometryChanged(self: pointer, slot: int, callback: proc (slot: int, geometry: pointer) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_geometryChanged".}
proc fcQScreen_availableGeometryChanged(self: pointer, geometry: pointer): void {.importc: "QScreen_availableGeometryChanged".}
proc fcQScreen_connect_availableGeometryChanged(self: pointer, slot: int, callback: proc (slot: int, geometry: pointer) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_availableGeometryChanged".}
proc fcQScreen_physicalSizeChanged(self: pointer, size: pointer): void {.importc: "QScreen_physicalSizeChanged".}
proc fcQScreen_connect_physicalSizeChanged(self: pointer, slot: int, callback: proc (slot: int, size: pointer) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_physicalSizeChanged".}
proc fcQScreen_physicalDotsPerInchChanged(self: pointer, dpi: float64): void {.importc: "QScreen_physicalDotsPerInchChanged".}
proc fcQScreen_connect_physicalDotsPerInchChanged(self: pointer, slot: int, callback: proc (slot: int, dpi: float64) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_physicalDotsPerInchChanged".}
proc fcQScreen_logicalDotsPerInchChanged(self: pointer, dpi: float64): void {.importc: "QScreen_logicalDotsPerInchChanged".}
proc fcQScreen_connect_logicalDotsPerInchChanged(self: pointer, slot: int, callback: proc (slot: int, dpi: float64) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_logicalDotsPerInchChanged".}
proc fcQScreen_virtualGeometryChanged(self: pointer, rect: pointer): void {.importc: "QScreen_virtualGeometryChanged".}
proc fcQScreen_connect_virtualGeometryChanged(self: pointer, slot: int, callback: proc (slot: int, rect: pointer) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_virtualGeometryChanged".}
proc fcQScreen_primaryOrientationChanged(self: pointer, orientation: cint): void {.importc: "QScreen_primaryOrientationChanged".}
proc fcQScreen_connect_primaryOrientationChanged(self: pointer, slot: int, callback: proc (slot: int, orientation: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_primaryOrientationChanged".}
proc fcQScreen_orientationChanged(self: pointer, orientation: cint): void {.importc: "QScreen_orientationChanged".}
proc fcQScreen_connect_orientationChanged(self: pointer, slot: int, callback: proc (slot: int, orientation: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_orientationChanged".}
proc fcQScreen_refreshRateChanged(self: pointer, refreshRate: float64): void {.importc: "QScreen_refreshRateChanged".}
proc fcQScreen_connect_refreshRateChanged(self: pointer, slot: int, callback: proc (slot: int, refreshRate: float64) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QScreen_connect_refreshRateChanged".}
proc fcQScreen_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QScreen_tr2".}
proc fcQScreen_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QScreen_tr3".}
proc fcQScreen_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QScreen_trUtf82".}
proc fcQScreen_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QScreen_trUtf83".}
proc fcQScreen_grabWindow2(self: pointer, window: uint, x: cint): pointer {.importc: "QScreen_grabWindow2".}
proc fcQScreen_grabWindow3(self: pointer, window: uint, x: cint, y: cint): pointer {.importc: "QScreen_grabWindow3".}
proc fcQScreen_grabWindow4(self: pointer, window: uint, x: cint, y: cint, w: cint): pointer {.importc: "QScreen_grabWindow4".}
proc fcQScreen_grabWindow5(self: pointer, window: uint, x: cint, y: cint, w: cint, h: cint): pointer {.importc: "QScreen_grabWindow5".}
proc fcQScreen_protectedbase_sender(self: pointer, ): pointer {.importc: "QScreen_protectedbase_sender".}
proc fcQScreen_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QScreen_protectedbase_senderSignalIndex".}
proc fcQScreen_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QScreen_protectedbase_receivers".}
proc fcQScreen_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QScreen_protectedbase_isSignalConnected".}
proc fcQScreen_staticMetaObject(): pointer {.importc: "QScreen_staticMetaObject".}
proc fcQScreen_delete(self: pointer) {.importc: "QScreen_delete".}

proc metaObject*(self: gen_qscreen_types.QScreen, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQScreen_metaObject(self.h))

proc metacast*(self: gen_qscreen_types.QScreen, param1: cstring): pointer =
  fcQScreen_metacast(self.h, param1)

proc metacall*(self: gen_qscreen_types.QScreen, param1: cint, param2: cint, param3: pointer): cint =
  fcQScreen_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qscreen_types.QScreen, s: cstring): string =
  let v_ms = fcQScreen_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qscreen_types.QScreen, s: cstring): string =
  let v_ms = fcQScreen_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc name*(self: gen_qscreen_types.QScreen, ): string =
  let v_ms = fcQScreen_name(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc manufacturer*(self: gen_qscreen_types.QScreen, ): string =
  let v_ms = fcQScreen_manufacturer(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc model*(self: gen_qscreen_types.QScreen, ): string =
  let v_ms = fcQScreen_model(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc serialNumber*(self: gen_qscreen_types.QScreen, ): string =
  let v_ms = fcQScreen_serialNumber(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc depth*(self: gen_qscreen_types.QScreen, ): cint =
  fcQScreen_depth(self.h)

proc size*(self: gen_qscreen_types.QScreen, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQScreen_size(self.h))

proc geometry*(self: gen_qscreen_types.QScreen, ): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQScreen_geometry(self.h))
